--- a/mustached-happiness/package.json
+++ b/mustached-happiness/package.json
@@ -11,10 +11,8 @@
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-newer": "^0.7.0",
-    "grunt-nodemon": "^0.2.1"
+    "grunt-newer": "^0.7.0"
   }
 }
