--- a/mustached-happiness/package.json
+++ b/mustached-happiness/package.json
@@ -3,14 +3,14 @@
   "description": "Simple express boilerplate.",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "^1.2.8",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-newer": "^0.7.0"
